# niuco

./: .env  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: pipeline.yml
challenge/: app.py  config.py  models.py  services.py
challenge/routes/: users.py
tests/: test_app.py  test_services.py
